# terra_firma

./: .gitignore  Cargo.toml  README.md  tiled_types_export.json
assets/maps/: map_00.tiled-session  map_00.tmx  map_01.tmx
assets/maps/map_00/: main.tmx  map_00.tiled-project  map_00.tiled-session
assets/maps/raw/: map_00_tileset.tsx  objects_tileset_00.tsx
assets/player/: player.aseprite
assets/tileset/raw/: bg-tile-0.ase  character-tile-00.ase
src/: animation.rs  game.rs  lib.rs  main.rs  player.rs  tiled.rs
src/screens/: gameplay_screen.rs  main_screen.rs  mod.rs
src/utils/: animation.rs  maps.rs  mod.rs
