[package]
name = "terra_firma"
version = "0.1.0"
edition = "2021"

[dependencies]
avian2d = "0.3.1"
bevy = { version = "0.16", features = ["dynamic_linking", "file_watcher"] }
bevy_ecs_tiled =  { version = "0.7.2", features = ["avian", "user_properties"] }
bevy_ecs_tilemap = "0.16.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
