[package]
name = "terra_firma"
version = "0.1.0"
edition = "2021"

[dependencies]
avian2d = "0.3.1"
bevy = { version = "0.16", features = ["dynamic_linking", "file_watcher", "asset_processor"] }
bevy-inspector-egui = "0.31.0"
bevy_ecs_tiled = "0.7.2"
bevy_ecs_tilemap = "0.16.0"
tiled = "0.14.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
